fix stupid mistake and provide some more hints on where to find mysqld
svn path=/trunk/KDE/kdepimlibs/; revision=1073943

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -66,17 +66,17 @@ macro(add_akonadi_isolated_test _source)
     set(_testrunner ${_testrunner}.shell)
   endif (UNIX)
 
-  find_program( MYSQLD_EXECUTABLE mysqld )
-  if ( ${MYSQLD_EXECUTABLE} )
+  find_program( MYSQLD_EXECUTABLE mysqld /usr/sbin /usr/local/sbin /usr/libexec /usr/local/libexec /opt/mysql/libexec /usr/mysql/bin )
+  if ( MYSQLD_EXECUTABLE )
     add_test( akonadi-mysql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-db.xml ${_executable} )
     add_test( akonadi-mysql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-fs.xml ${_executable} )
-  endif ( ${MYSQLD_EXECUTABLE} )
+  endif ( MYSQLD_EXECUTABLE )
 
   find_program( POSTGRES_EXECUTABLE postgres )
-  if ( ${POSTGRES_EXECUTABLE} )
+  if ( POSTGRES_EXECUTABLE )
     add_test( akonadi-postgresql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-db.xml ${_executable} )
     add_test( akonadi-postgresql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-fs.xml ${_executable} )
-  endif ( ${POSTGRES_EXECUTABLE} )
+  endif ( POSTGRES_EXECUTABLE )
 
   #add_test( akonadi-sqlite-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-sqlite.xml ${_executable} )
 endmacro(add_akonadi_isolated_test)
