SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1075609

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -24,6 +24,7 @@ Name[it]=Azioni per i contatti
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
+Name[nl]=Contactpersoon-acties
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
 Name[sr]=Радње са контактима
@@ -51,6 +52,7 @@ Comment[it]=Configua le azioni per i contatti
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
+Comment[nl]=De contactpersoon-actie configureren
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[sr]=Подесите радње са контактима
