SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1079468

--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -14,6 +14,7 @@ Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[it]=Plugin di Kontact
+Name[ja]=Kontact プラグイン
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
