--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -21,6 +21,7 @@ Name[et]=Kontaktitoimingud
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
 Name[it]=Azioni per i contatti
+Name[ja]=連絡先アクション
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -49,6 +50,7 @@ Comment[et]=Kontaktitoimingute seadistamine
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
 Comment[it]=Configua le azioni per i contatti
+Comment[ja]=連絡先アクションの設定
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
