Headers for akonadi-kmime, akonadi-contac, akonadi-kcal. Change the macro to also install subdirectories (I guess there are more elegant ways to do that)
svn path=/trunk/KDE/kdepimlibs/; revision=1079636

--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -1,15 +1,18 @@
 if (NOT KDEPIM_ONLY_KLEO)
 
-add_subdirectory( tests )
+#add_subdirectory( tests )
 
 macro(install_headers _dir)
-  file(GLOB _includes "${CMAKE_CURRENT_SOURCE_DIR}/${_dir}/[A-Za-z]*")
-  install(FILES ${_includes} DESTINATION ${INCLUDE_INSTALL_DIR}/KDE/${_dir} COMPONENT Devel)
+  file(GLOB_RECURSE _includes ${CMAKE_CURRENT_SOURCE_DIR} ${_dir}/*)
+  foreach(_file_to_install ${_includes})
+    if(NOT _file_to_install MATCHES ".svn")
+      string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _file_to_install2 ${_file_to_install})
+      install(FILES ${_file_to_install} DESTINATION ${INCLUDE_INSTALL_DIR}/KDE RENAME ${_file_to_install2} COMPONENT Devel)
+    endif(NOT _file_to_install MATCHES ".svn")
+  endforeach(_file_to_install ${_includes})
 endmacro(install_headers)
 
-if(Akonadi_FOUND)
-  install_headers( Akonadi )
-endif(Akonadi_FOUND)
+install_headers( Akonadi )
 install_headers( KHolidays )
 install_headers( KABC )
 install_headers( KBlog )
