--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -6,8 +6,8 @@ macro(install_headers _dir)
   file(GLOB_RECURSE _includes ${CMAKE_CURRENT_SOURCE_DIR} ${_dir}/*)
   foreach(_file_to_install ${_includes})
     if(NOT _file_to_install MATCHES ".svn")
-      string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _file_to_install2 ${_file_to_install})
-      install(FILES ${_file_to_install} DESTINATION ${INCLUDE_INSTALL_DIR}/KDE RENAME ${_file_to_install2} COMPONENT Devel)
+      string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" _filename ${_file_to_install})
+      install(FILES ${_file_to_install} DESTINATION ${INCLUDE_INSTALL_DIR}/KDE RENAME ${_filename} COMPONENT Devel)
     endif(NOT _file_to_install MATCHES ".svn")
   endforeach(_file_to_install ${_includes})
 endmacro(install_headers)
