SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1080506

--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -15,6 +15,7 @@ Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
+Name[km]=កម្មវិធី​ជំនួយ Kontact
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
