--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -22,6 +22,7 @@ Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
+Name[km]=អំពើ​ទំនាក់​ទំនង
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -51,6 +52,7 @@ Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
 Comment[it]=Configua le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
+Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
