Add some tests for the proxy models.
Rigging for hunting down a bug in match() somewhere in the stack.

svn path=/trunk/KDE/kdepimlibs/; revision=1081475

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -105,6 +105,7 @@ add_akonadi_test(protocolhelpertest.cpp)
 add_akonadi_test(entitytreemodeltest.cpp)
 add_akonadi_test(collectionutilstest.cpp)
 add_akonadi_test(entitydisplayattributetest.cpp)
+add_akonadi_test(proxymodelstest.cpp)
 
 # qtestlib tests that need non-exported stuff from akonadi-kde
 kde4_add_unit_test(resourceschedulertest TESTNAME akonadi-resourceschedulertest resourceschedulertest.cpp ../resourcescheduler.cpp)
