SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1085577

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -11,6 +11,7 @@ X-KDE-Weight=200
 
 Name=Contact Actions
 Name[ca]=Accions del contacte
+Name[ca@valencia]=Accions del contacte
 Name[cs]=Činnosti kontaktů
 Name[da]=Kontakthandlinger
 Name[de]=Kontakt-Aktionen
@@ -19,9 +20,14 @@ Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
+Name[it]=Azioni per i contatti
+Name[ja]=連絡先アクション
+Name[km]=អំពើ​ទំនាក់​ទំនង
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
+Name[nl]=Contactpersoon-acties
+Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
 Name[sr]=Радње са контактима
@@ -36,6 +42,7 @@ Name[zh_CN]=联系人动作
 Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[ca]=Configura les accions del contacte
+Comment[ca@valencia]=Configura les accions del contacte
 Comment[cs]=Nastavit činnosti kontaktů
 Comment[da]=Indstil kontakthandlinger
 Comment[de]=Kontakt-Aktionen einrichten
@@ -44,9 +51,14 @@ Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
+Comment[it]=Configua le azioni per i contatti
+Comment[ja]=連絡先アクションの設定
+Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
+Comment[nl]=De contactpersoon-actie configureren
+Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[sr]=Подесите радње са контактима
