remove the FAILED.log file before each runsingletest
svn path=/trunk/KDE/kdepimlibs/; revision=1093045

--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -104,6 +104,8 @@ macro(kcal_run_single_test _prefix _file _test _testarg)
   add_test( ${_prefix}-${_fn} ${_runner} ${_test_path} ${_testarg} ${_file} )
 endmacro(kcal_run_single_test)
 
+FILE(REMOVE ${CMAKE_CURRENT_BINARY_DIR}/FAILED.log)
+
 FOREACH( file ${testFiles} )
   kcal_run_single_test( RecurNext ${file} testrecurrence "next" )
 ENDFOREACH(file)
