SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1095361

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -18,6 +18,7 @@ Name[de]=Kontakt-Aktionen
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
+Name[fi]=Yhteystietotoiminnot
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
 Name[it]=Azioni per i contatti
@@ -49,6 +50,7 @@ Comment[de]=Kontakt-Aktionen einrichten
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
+Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
 Comment[it]=Configua le azioni per i contatti
