--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -12,6 +12,7 @@ Name[en_GB]=Calendar
 Name[eo]=Kalendaro
 Name[es]=Calendario
 Name[et]=Kalender
+Name[fi]=Kalenteri
 Name[fr]=Calendrier
 Name[ga]=Féilire
 Name[gl]=Axenda
