--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -10,6 +10,7 @@ Name[el]=Ημερολόγιο σε τοπικό αρχείο
 Name[en_GB]=Calendar in Local File
 Name[es]=Calendario en archivo local
 Name[et]=Kalender kohalikus failis
+Name[fi]=Kalenteri paikallisessa tiedostossa
 Name[fr]=Calendrier dans un fichier local
 Name[ga]=Féilire i gComhad Logánta
 Name[gl]=Axenda nun ficheiro local
@@ -54,6 +55,7 @@ Comment[el]=Προσφέρει πρόσβαση σε ένα ημερολόγιο
 Comment[en_GB]=Provides access to a calendar stored in a single local file
 Comment[es]=Provee acceso a un calendario almacenado en un único archivo local
 Comment[et]=Võimaldab kasutada kohalikku faili salvestatud kalendrit
+Comment[fi]=Tarjoaa pääsyn yksittäiseen paikalliseen tiedostoon tallennettuun kalenteriin
 Comment[fr]=Fourni l'accès à un agenda stocké dans un fichier local
 Comment[ga]=Soláthraíonn sé seo rochtain ar fhéilire stóráilte i gcomhad logánta amháin
 Comment[gl]=Dá acceso a un calendario gardado nun único ficheiro local
