--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -10,6 +10,7 @@ Name[el]=Ημερολόγιο σε τοπικό κατάλογο
 Name[en_GB]=Calendar in Local Directory
 Name[es]=Calendario en directorio local
 Name[et]=Kalender kohalikus kataloogis
+Name[fi]=Kalenteri paikallisessa kansiossa
 Name[fr]=Calendrier dans un dossier local
 Name[ga]=Féilire i gComhadlann Logánta
 Name[gl]=Axenda nun cartafol local
@@ -54,6 +55,7 @@ Comment[el]=Προσφέρει πρόσβαση σε αντικείμενα ημ
 Comment[en_GB]=Provides access to calendar items, each stored in a single file, in a given directory
 Comment[es]=Provee acceso a elementos de un calendario, cada uno almacenado en un archivo diferente, dentro de un directorio determinado
 Comment[et]=Võimaldab kasutada eraldi failidesse salvestatud kalendrielemente määratud kataloogis
+Comment[fi]=Tarjoaa pääsyn annetun kansion erillisiin tiedostoihin tallennettuihin kalenteritietueisiin
 Comment[fr]=Fourni l'accès à des entrées d'agenda, chaque élément étant représenté par un fichier dans le dossier indiqué
 Comment[ga]=Soláthraíonn sé seo rochtain ar mhíreanna féilire, gach ceann stóráilte i gcomhad aonair, i gcomhadlann sonraithe
 Comment[gl]=Dá acceso aos obxectos do calendario, cada un gardado nun ficheiro nun cartafol dado
