--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -19,6 +19,7 @@ Name[el]=Πόροι του KDE
 Name[en_GB]=KDE Resources
 Name[es]=Recursos KDE
 Name[et]=KDE ressursid
+Name[fi]=KDE-resurssit
 Name[fr]=Ressources KDE
 Name[ga]=Acmhainní KDE
 Name[gl]=Recursos de KDE
@@ -65,6 +66,7 @@ Comment[el]=Ρύθμιση πόρων του KDE
 Comment[en_GB]=Configure KDE Resources
 Comment[es]=Configurar recursos de KDE
 Comment[et]=KDE ressursside seadistamine
+Comment[fi]=KDE-resurssien asetukset
 Comment[fr]=Configurer les ressources KDE
 Comment[ga]=Cumraigh Acmhainní KDE
 Comment[gl]=Configurar os recursos de KDE
