--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -22,6 +22,7 @@ Name[el]=Κύριος μεταφορέας
 Name[en_GB]=Mail Transport
 Name[es]=Transporte de correo
 Name[et]=Kirja saatmise viis
+Name[fi]=Postinvälitys
 Name[fr]=Transport de courriel
 Name[ga]=Iompar Ríomhphoist
 Name[gl]=Transporte de correo
