--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -9,6 +9,7 @@ Name[el]=Διαχειριστής KResources
 Name[en_GB]=KResources Manager
 Name[es]=Gestor de KResources
 Name[et]=KDE ressursside haldur
+Name[fi]=KResources-hallinta
 Name[fr]=Gestionnaire de ressources
 Name[ga]=Bainisteoir KResources
 Name[gl]=Xestor de KResources
@@ -55,6 +56,7 @@ Comment[el]=Διαχειριστής KResources
 Comment[en_GB]=KResources Manager
 Comment[es]=Gestor de KResources
 Comment[et]=KDE ressursside haldur
+Comment[fi]=KResources-hallinta
 Comment[fr]=Gestionnaire de ressources
 Comment[ga]=Bainisteoir KResources
 Comment[gl]=Xestor de KResources
