--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -9,6 +9,7 @@ Name[el]=Πρόσθετο KResources
 Name[en_GB]=KResources Plugin
 Name[es]=Complemento de KResources
 Name[et]=KDE ressursside plugin
+Name[fi]=KResources-liitännäinen
 Name[fr]=Module externe de gestion de ressources
 Name[ga]=Breiseán KResources
 Name[gl]=Engadido de KResources
@@ -55,6 +56,7 @@ Comment[el]=Πρόσθετο πλαισίου εργασίας του KResource
 Comment[en_GB]=KResources Framework Plugin
 Comment[es]=Complemento de estructura de KResources
 Comment[et]=KDE ressursside raamistiku plugin
+Comment[fi]=KResources-kehysliitännäinen
 Comment[fr]=Module externe d'infrastructure de ressources
 Comment[ga]=Breiseán Creatlaí KResources
 Comment[gl]=Engadido da infraestrutura KResource
