Bring back the dialog for editing single name components
svn path=/trunk/KDE/kdepimlibs/; revision=1098008

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -33,6 +33,7 @@ set(akonadicontact_editor_SRCS
   editor/imeditwidget.cpp
   editor/kdatepickerpopup.cpp
   editor/kedittagsdialog.cpp
+  editor/nameeditdialog.cpp
   editor/nameeditwidget.cpp
   editor/phoneeditwidget.cpp
   editor/secrecyeditwidget.cpp
