--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -24,6 +24,7 @@ Name[gl]=Accións de contacto
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
 Name[km]=អំពើ​ទំនាក់​ទំនង
+Name[lt]=Kontaktų veiksmai
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -56,6 +57,7 @@ Comment[gl]=Configurar as accións de contacto
 Comment[it]=Configua le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
+Comment[lt]=Konfigūruoti kontaktų veiksmus
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
