--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -78,6 +78,7 @@ kde4_add_library(akonadi-contact SHARED ${akonadicontact_LIB_SRC})
 target_link_libraries(akonadi-contact akonadi-kde
                                       kabc
                                       kcal
+                                      kpimutils
                                       ${KDE4_KDEUI_LIBS}
                                       ${KDE4_KIO_LIBS}
                                       ${KDE4_PHONON_LIBS}
@@ -86,6 +87,7 @@ target_link_libraries(akonadi-contact LINK_INTERFACE_LIBRARIES
                                       akonadi-kde
                                       kabc
                                       kcal
+                                      kpimutils
                                       ${KDE4_KDEUI_LIBS}
                                       ${KDE4_KIO_LIBS}
                                       ${KDE4_PHONON_LIBS}
