--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -17,7 +17,9 @@ install_headers( KMime )
 install_headers( KontactInterface )
 install_headers( KPIMIdentities )
 install_headers( KPIMUtils )
-install_headers( KResources )
+if (NOT KDEPIM_NO_KRESOURCES)
+  install_headers( KResources )
+endif (NOT KDEPIM_NO_KRESOURCES)
 install_headers( KTNEF )
 install_headers( Mailtransport )
 install_headers( Syndication )
