--- a/includes/tests/CMakeLists.txt
+++ b/includes/tests/CMakeLists.txt
@@ -31,7 +31,9 @@ add_includes( KontactInterface )
 add_includes( KPIMIdentities )
 add_includes( KPIMTextEdit )
 add_includes( KPIMUtils )
-add_includes( KResources )
+if (NOT KDEPIM_NO_KRESOURCES)
+  add_includes( KResources )
+endif (NOT KDEPIM_NO_KRESOURCES)
 add_includes( KTNEF )
 add_includes( Mailtransport )
 add_includes( Syndication )
