SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1100630

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -36,6 +36,7 @@ Name[sr@ijekavian]=Радње са контактима
 Name[sr@ijekavianlatin]=Radnje sa kontaktima
 Name[sr@latin]=Radnje sa kontaktima
 Name[sv]=Kontaktåtgärder
+Name[th]=การกระทำต่าง ๆ ของที่อยู่ติดต่อ
 Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
 Name[x-test]=xxContact Actionsxx
@@ -69,6 +70,7 @@ Comment[sr@ijekavian]=Подесите радње са контактима
 Comment[sr@ijekavianlatin]=Podesite radnje sa kontaktima
 Comment[sr@latin]=Podesite radnje sa kontaktima
 Comment[sv]=Anpassa kontaktåtgärder
+Comment[th]=ปรับแต่งการกระทำต่าง ๆ ของที่อยู่ติดต่อ
 Comment[tr]=Kişi Eylemlerini Yapılandır
 Comment[uk]=Налаштування дій для контакту
 Comment[x-test]=xxConfigure the Contact Actionsxx
