--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -30,6 +30,7 @@ Name[sr@ijekavian]=Прикључак за Контакт
 Name[sr@ijekavianlatin]=Priključak za Kontact
 Name[sr@latin]=Priključak za Kontact
 Name[sv]=Insticksprogram för Kontact
+Name[th]=ส่วนเสริมของ Kontact
 Name[tr]=Kontact Eklentisi
 Name[uk]=Додаток до Kontact
 Name[x-test]=xxKontact Pluginxx
