--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -95,7 +95,7 @@ Comment[sr@ijekavian]=Подешавање ресурса КДЕ‑а
 Comment[sr@ijekavianlatin]=Podešavanje resursa KDE‑a
 Comment[sr@latin]=Podešavanje resursa KDE‑a
 Comment[sv]=Anpassa KDE-resurser
-Comment[th]=ปรับแต่งทรัพยากร KDE
+Comment[th]=ปรับแต่งทรัพยากรต่าง ๆ ของ KDE
 Comment[tr]=KDE Kaynaklarını Yapılandır
 Comment[uk]=Налаштування ресурсів даних KDE
 Comment[x-test]=xxConfigure KDE Resourcesxx
