--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -38,7 +38,7 @@ Name[sr@ijekavian]=Менаџер к‑ресурса
 Name[sr@ijekavianlatin]=Menadžer k‑resursa
 Name[sr@latin]=Menadžer k‑resursa
 Name[sv]=Resurshantering
-Name[th]=ตัวจัดการทรัพยากร
+Name[th]=ตัวจัดการทรัพยากร-K
 Name[tr]=KResources Yöneticisi
 Name[uk]=Менеджер KResource-ів
 Name[x-test]=xxKResources Managerxx
@@ -85,7 +85,7 @@ Comment[sr@ijekavian]=Менаџер к‑ресурса
 Comment[sr@ijekavianlatin]=Menadžer k‑resursa
 Comment[sr@latin]=Menadžer k‑resursa
 Comment[sv]=Resurshantering
-Comment[th]=ตัวจัดการทรัพยากร K
+Comment[th]=ตัวจัดการทรัพยากร
 Comment[tr]=KResources Yöneticisi
 Comment[uk]=Менеджер KResource-ів
 Comment[x-test]=xxKResources Managerxx
