--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -51,7 +51,7 @@ Name[sr@ijekavian]=Транспорт поште
 Name[sr@ijekavianlatin]=Transport pošte
 Name[sr@latin]=Transport pošte
 Name[sv]=E-postöverföring
-Name[th]=โปรแกรมรับ/ส่งเมล
+Name[th]=เครื่องมือส่งจดหมาย
 Name[tr]=E-posta Aktarımı
 Name[uk]=Транспортування пошти
 Name[x-test]=xxMail Transportxx
