SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1100946

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -21,6 +21,7 @@ Name[et]=Kontaktitoimingud
 Name[fi]=Yhteystietotoiminnot
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
+Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
 Name[km]=អំពើ​ទំនាក់​ទំនង
@@ -54,6 +55,7 @@ Comment[et]=Kontaktitoimingute seadistamine
 Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
+Comment[hu]=A névjegyműveletek beállítása
 Comment[it]=Configua le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
