--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -14,6 +14,7 @@ Name[fi]=Kontact-liitännäinen
 Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
+Name[hu]=Kontact-modul
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
 Name[km]=កម្មវិធី​ជំនួយ Kontact
